# image_captioner

./: .gitignore  Cargo.toml  README.md  image_captioner.py  requirements.txt  setup_python.rs
src/: captioner.rs  lib.rs
