[package]
name = "rust_image_captioner"
version = "0.1.0"
edition = "2021"
author = "Alex Eversbusch Rainsound.ai"
description = "Create images for captions using a deep learning model."
copyright = "Creative Commons Attribution 4.0 International"
credits = "Li, Junnan and Li, Dongxu and Xiong, Caiming and Hoi, Steven https://huggingface.co/Salesforce/blip-image-captioning-large"
build = "setup_python.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maturin = "1.3.2"
pyo3 = { version = "0.15", features = ["extension-module"] }
which = "5.0.0"

[build-dependencies]
which = "5.0"

[[bin]]
name = "setup_python"
path = "setup_python.rs"