[package]
name = "image_captioner"
version = "0.1.11"
edition = "2021"
author = "Alex Eversbusch Rainsound.ai"
description = "Create captions for images automatically using a BLIP deep learning model."
license = "MIT OR Apache-2.0"
credits = "Li, Junnan and Li, Dongxu and Xiong, Caiming and Hoi, Steven https://huggingface.co/Salesforce/blip-image-captioning-large"
build = "setup_python.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
which = "5.0.0"

[build-dependencies]
which = "5.0"

[[bin]]
name = "setup_python"
path = "setup_python.rs"